# weather

./: .env  .env.db  .env.mq  .env.tg  .gitignore  README.md  docker-compose.yml
project/: .dockerignore  Dockerfile  manage.py  pyproject.toml
project/api/v1/: urls.py
project/api/v1/celery/: serializers.py  views.py
project/api/v1/city/: serializers.py  views.py
project/api/v1/requests_history/: serializers.py  views.py
project/api/v1/settings/: serializers.py  views.py
project/api/v1/user/: filters.py  serializers.py  views.py
project/api/v1/weather/: views.py  (+1 more)
project/apps/: urls.py
project/apps/bots/: telegram_bot.py
project/apps/city/: admin.py  apps.py  models.py
project/apps/dadata/: services.py
project/apps/helpers/: batchmixin.py  celery.py  custom_error.py  exceptions.py  filters.py  loaders.py  managers.py  models.py  pagination.py  registration_validators.py  reports.py  serializers.py  services.py  viewsets.py
project/apps/middleware/: request_middleware.py
project/apps/requests_history/: __init__.py  admin.py  apps.py  models.py
project/apps/user/: admin.py  authenticate_backend.py  managers.py  tasks.py
project/apps/weather/: __init__.py  admin.py  apps.py  models.py
project/settings/: __init__.py  common.py  dev.py  production.py
project/settings/inc_django/: api_network.py  applications.py  caches.py  databases.py  languages.py  logging.py  media.py  middleware.py  security.py  static.py  tz.py
project/settings/inc_other/: celery_config.py  ckeditor.py  constance.py  cors.py  drf.py  fcm_django.py  jwt.py  swagger.py
(+8 files in other folders)
